--- a/style.css
+++ b/style.css
@@ -142,12 +142,15 @@ div{
     display: flex;
     justify-content:space-around;
     background-color: #CBD4C2;
+    width: 100%;
+    height: 140px;
 }
 
 .contact-me button {
     border-radius: 12px;
     height: 75px;
     width: 150px;
+    margin-top: 20px;
     color: #50514F;
     background-color: #C3B299;
     border: none;
@@ -176,7 +179,7 @@ button:hover{
 
 #item {
     border-radius: 7px;
-    border: none;
+    border-color: #2D3142;
 }
 
 #addItem{
